=== Version 0.4
* Enhancements
  * Added all of the h4 locators
  * Updated to use selenium-webdriver 2.7.0
  * Updated to use watir-webdriver 0.3.4

=== Version 0.3.2 / 2011-09-22
* Enhancements
  * Element#when_present now returns the element object
  * Element#when_visible now returns the element object
  * Element#when_not_visible now returns the element object
  * Added #clear method for TextArea
  * Added support for Heading element
  * Added all of the h1 locators
  * Added all of the h2 locators
  * Added all of the h3 locators
  * Updated to use selenium-webdriver 2.6.0

=== Version 0.3.1 / 2011-09-08
* Enhancements
  * Updated to use watir-webdriver 0.3.3

=== Version 0.3.0 / 2011-09-04
* Enhancements
  * Changed namespace for selenium and watir to include webdriver
  * Support for locating the following elements when nested
    * Link
    * Button
    * TextField
    * HiddenField
    * TextArea
    * SelectList
    * Checkbox
    * RadioButton
    * Div
    * Span
    * Table
    * TableCell
    * Image
    * Form
    * OrderedList
    * UnorderedList
    * ListItem
  * Added #modal_dialog to PageObject to override the default modal dialog behavior
  * Changed element keys to include _webdriver
  * Updated to use selenium-webdriver 2.5.0

=== Version 0.2.5 / 2011-08-19
* Enhancements
  * #attach_to_window takes an optional block - will return to calling window after block executes
  * Added the following instance methods to PageObject via ElementLocators
    * #button_element
    * #text_field_element
    * #hidden_field_element
    * #text_area_element
    * #select_list_element
    * #link_element
    * #checkbox_element
    * #radio_button_element
    * #div_element
    * #span_element
    * #table_element
    * #cell_element
    * #image_element
    * #form_element
    * #list_item_element
    * #unordered_list_element
    * #ordered_list_element
  * Updated to use selenium-webdriver 2.4.0
  * Updated to use watir-webdriver 0.3.2
