@@ -42,6 +42,8 @@
   <h2>h2's are cool</h2>
   <h3>h3's are cool</h3>
   <h4>h4's are cool</h4>
+  <h5>h5's are cool</h5>
+  <h6>h6's are cool</h6>
 
 </body>
 </html>
