@@ -84,5 +84,13 @@ module PageObject
     def h4_element(identifier={:index => 0})
       @platform.h4_for(identifier)
     end
+
+    def h5_element(identifier={:index => 0})
+      @platform.h5_for(identifier)
+    end
+
+    def h6_element(identifier={:index => 0})
+      @platform.h6_for(identifier)
+    end
   end
 end
