@@ -650,6 +650,54 @@ module PageObject
           ::PageObject::Elements::Heading.new(element, :platform => :selenium_webdriver)
         end
 
+        #
+        # platform method to retrieve the text from a h5
+        # See PageObject::Accessors#h5
+        #
+        def h5_text_for(identifier)
+          how, what, frame_identifiers = parse_identifiers(identifier, Elements::Heading, 'h5')
+          switch_to_frame(frame_identifiers)
+          value = @browser.find_element(how, what).text
+          @browser.switch_to.default_content
+          value          
+        end
+        
+        #
+        # platform method to retrieve the h5 element
+        # See PageObject::Accessors#h5
+        #
+        def h5_for(identifier)
+          how, what, frame_identifiers = parse_identifiers(identifier, Elements::Heading, 'h5')
+          switch_to_frame(frame_identifiers)
+          element = @browser.find_element(how, what)
+          @browser.switch_to.default_content unless frame_identifiers.nil?
+          ::PageObject::Elements::Heading.new(element, :platform => :selenium_webdriver)
+        end
+
+        #
+        # platform method to retrieve the text from a h6
+        # See PageObject::Accessors#h6
+        #
+        def h6_text_for(identifier)
+          how, what, frame_identifiers = parse_identifiers(identifier, Elements::Heading, 'h6')
+          switch_to_frame(frame_identifiers)
+          value = @browser.find_element(how, what).text
+          @browser.switch_to.default_content
+          value          
+        end
+        
+        #
+        # platform method to retrieve the h6 element
+        # See PageObject::Accessors#h6
+        #
+        def h6_for(identifier)
+          how, what, frame_identifiers = parse_identifiers(identifier, Elements::Heading, 'h6')
+          switch_to_frame(frame_identifiers)
+          element = @browser.find_element(how, what)
+          @browser.switch_to.default_content unless frame_identifiers.nil?
+          ::PageObject::Elements::Heading.new(element, :platform => :selenium_webdriver)
+        end
+
         private
         
         def parse_identifiers(identifier, element, tag_name=nil, additional=nil)
